<resources>
    <string name="app_name">MadSnakes</string>
    <string name="game_over">Game Over</string>
    <string name="game_lost">You have died!</string>
    <string name="game_ended">Time expired. You survived!</string>
    <string name="score_text">Score:</string>
    <string name="restart">Restart</string>
    <string name="menu">Menu</string>
    <string name="play">Play</string>
    <string name="header">MadSnakes</string>
</resources>
