<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/popup_width"
    android:layout_height="@dimen/popup_height"
    android:layout_gravity="center"
    android:background="@color/menuColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over"
        android:textSize="@dimen/gameover_text_size" />

    <TextView
        android:id="@+id/end_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:text="@string/game_lost" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/score_text"
        android:textAlignment="center"
        android:textSize="@dimen/score_text_size" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        android:text="@string/restart"
        android:textAlignment="center" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/menu"
        android:textAlignment="center" />


</FrameLayout>